[package]
name = "implant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = {version =  "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
# psutil = "3.2.2"
sysinfo = "0.29.0"
tokio = { version = "1", features = ["full"] }
uuid = {version = "1.3.3", features = ["v4", "serde"]}
