[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde_json = "1.0.96"
tui = "0.19.0"
unicode-width = "0.1.10"
